--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Finance Tools</title>
 </head>
 <body>
+	<h1>Finance Tools</h1>
 	
 </body>
 </html>
