fix title and new desc

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<title>Finance Tools</title>
 </head>
 <body>
-	<h1>Finance Tools</h1>
+	<h1>Finance Tools by LinkAja</h1>
+	<p>Welcome to Finance Tools</p>
 	
 </body>
 </html>
